--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -11,10 +11,11 @@ mybatis.type-aliases-package=com.gf.music.domain
 #将数据库字段转换成驼峰式与实体类字段对应
 mybatis.configuration.mapUnderscoreToCamelCase=true
 #打印sql/参数/结果
-mybatis.configuration.logImpl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.logImpl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.mail.host=smtp.qq.com
 spring.mail.username=1248475056@qq.com
 spring.mail.password=dkynmhdvwqlijjbg
+
 
 
